Template refacto : tutorials (not ended) + titles

--- a/assets/css/scss/_mobile-tablet.scss
+++ b/assets/css/scss/_mobile-tablet.scss
@@ -298,6 +298,7 @@
                 text-overflow: ellipsis;
                 white-space: nowrap;
                 overflow: hidden;
+                max-width: 200px;
             }
         }
 
