--- a/templates/article/base.html
+++ b/templates/article/base.html
@@ -9,6 +9,12 @@
 
 
 
+{% block mobile_title %}
+    Articles
+{% endblock %}
+
+
+
 {% block breadcrumb_base %}
     <li><a href="{% url "zds.article.views.index" %}">Articles</a></li>
 {% endblock %}
