--- a/templates/member/base.html
+++ b/templates/member/base.html
@@ -8,6 +8,12 @@
 
 
 
+{% block mobile_title %}
+    Membres
+{% endblock %}
+
+
+
 {% block breadcrumb_base %}
     <li><a href="{% url "zds.member.views.index" %}">Membres</a></li>
 {% endblock %}
