--- a/templates/mp/base.html
+++ b/templates/mp/base.html
@@ -8,6 +8,12 @@
 
 
 
+{% block mobile_title %}
+    Messagerie
+{% endblock %}
+
+
+
 {% block breadcrumb_base %}
     <li><a href="{% url "zds.mp.views.index" %}">Messagerie Privée</a></li>
 {% endblock %}
