--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -10,6 +10,12 @@
 
 
 
+{% block mobile_title %}
+    Forums
+{% endblock %}
+
+
+
 {% block breadcrumb_base %}
     <li><a href="{% url "zds.forum.views.index" %}">Forums</a></li>
 {% endblock %}
@@ -30,7 +36,7 @@
             {% endcaptureas %}
 
             {% if sidebaractions %}
-                <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions sur ce sujet">
+                <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
                     <h3>Actions</h3>
                     <ul>
                         {{ sidebaractions|safe }}
