fix visible alerts

--- a/templates/forum/topic.html
+++ b/templates/forum/topic.html
@@ -225,6 +225,7 @@
                 </div>
                 </div>
             </div>
+            {% if perms.forum.change_topic %}
             {% for alert in post.alerts.all %}
             <div class="row">
                 <div class="large-12 columns alert-box alert">
@@ -245,6 +246,7 @@
                 </div>
             </div>
             {% endfor %}
+            {% endif %}
         </div>
     </div>
 </div>
