--- a/templates/source.html
+++ b/templates/source.html
@@ -344,7 +344,7 @@
     <script type="text/javascript" src="{% static "bower_components/modernizr/modernizr.js" %}"></script>
     <script type="text/javascript" src="{% static "bower_components/fastclick/lib/fastclick.js" %}"></script>
     <script type="text/javascript" src="{% static "bower_components/foundation/js/foundation.min.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/newsletter.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/newsletter.js" %}"></script>
     <script type="text/javascript" src="{% static "js/editor.js" %}"></script>
     <script>
       $(document).foundation();
