--- a/templates/source.html
+++ b/templates/source.html
@@ -5,12 +5,13 @@
 {% load interventions %}
 {% load topbar %}
 
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Sans nom{% endblock %}{% block title_base %}{% endblock %} &#183; ZesteDeSavoir</title>
+    <link rel="shortcut icon" type="image/png" href="{% static "images/favicon.png" %}">
     <link href="{% static "css/zds.css" %}" rel="stylesheet" type="text/css" />
   </head>
   <body>   
