--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -49,6 +49,28 @@
 	line-height: 40px;
 }
 
+.top-bar-section .dropdown form {
+	width: 100%;
+	height: 24px;
+
+	button {
+		width: 100%;
+		top: -1px;
+		text-align: left;
+		line-height: 24px;
+		height: 24px;
+		font-size: 13px;
+		padding: 0 20px;
+		background: #084561;
+
+		&:hover,
+		&:focus {
+			background: #396a81;
+			transition: background-color 150ms ease-out;
+		}
+	}
+}
+
 /*
 Logo
 */
