fix import filter

--- a/templates/member/profile.html
+++ b/templates/member/profile.html
@@ -2,6 +2,7 @@
 {% load emarkdown %}
 {% load email_obfuscator %}
 {% load humanize %}
+{% load profile %}
 
 {% block title %}
     {{ usr.username }}
