display message when you answer : issue #398

--- a/templates/forum/answer.html
+++ b/templates/forum/answer.html
@@ -40,5 +40,9 @@
         {% include "forum/previsualization.part.html" %}
     {% endwith %}
 {% endif %}
+<hr />
+{% for post in posts %}
+    {% include "forum/post.part.html" %}
+{% endfor %}
 
 {% endblock %}
