--- a/templates/home.html
+++ b/templates/home.html
@@ -72,7 +72,7 @@ class="active"
                         </div>
                         <div class="large-4 columns">
                             {% if article.get_reaction_count = 0 %}
-                                <a class="fi-comment size-16" href="{{article.get_last_reaction.get_absolute_url}}"><small>Aucune réaction</small></a>
+                                <a class="fi-comment size-16" href="{{article.get_absolute_url_online}}#reactions"><small>Aucune réaction</small></a>
                             {% elif article.get_reaction_count = 1 %}
                                 <a class="fi-comment size-16" href="{{article.get_last_reaction.get_absolute_url}}"><small> {{ article.get_reaction_count }} réaction</small></a>
                             {% else %}
