--- a/templates/email/confirm_register.html
+++ b/templates/email/confirm_register.html
@@ -9,7 +9,7 @@ Bonjour <strong>{{username}}</strong>,
 <br />
 Merci de votre inscription sur <a href="http://zestedesavoir.com">Zeste de Savoir</a>. Pour activer votre profil, cliquez sur le lien client-dessous:
 <br />
-{{url}}.
+<a href="{{url}}">{{url}}.</a>
 <br />
 Cordialement,
 <br />
