--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -29,14 +29,14 @@
     <ul>
     	{% with topics=user|followed_topics %}
         {% for topic in topics %}
-        {% with state=topic|is_read %}
         <li>
             <span class="right" data-tooltip class="has-tip" title="Ne plus suivre ce sujet"><a href="{% url "zds.forum.views.edit" %}?topic={{ topic.pk }}&page=1&follow=1" class="fi-x"></a></span>
             {% if topic.is_solved %}<i class="fi-check success left"> </i>{% endif %}
             {% if topic.is_locked %}<i class="fi-lock grey left"> </i>{% endif %}
-            <a href="{{topic.get_absolute_url}}" class="{% if state = True %}topic_read{% else %}topic_unread{% endif %}">{{topic.title}}</a>
+            {% with first_unread=topic.first_unread_post %} 
+            <a href="{% if first_unread %}{{ first_unread.get_absolute_url }}{% else %}{{ topic.last_read_post.get_absolute_url }}{% endif %}" class="{% if topic|is_read %}topic_read{% else %}topic_unread{% endif %}">{{ topic.title }}</a>
+            {% endwith %}
         </li>
-        {% endwith %}
         {% endfor %}
         {% endwith %}
     </ul>
