--- a/templates/source.html
+++ b/templates/source.html
@@ -106,7 +106,7 @@
                 
                   {% for topic in unread_topics %}
                       {% with first_unread=topic.first_unread_post %}
-                      <li><a href="{{ topic.last_read_post.get_absolute_url }}">
+                      <li><a href="{{ first_unread.get_absolute_url }}">
                           <div class="row">
                             <div class="large-12 columns">
                               <div class="left">
