--- a/templates/tutorial/view_tutorial_online.html
+++ b/templates/tutorial/view_tutorial_online.html
@@ -95,7 +95,7 @@
     {% include "forum/topic_pagination.part.html" with position="top" %}
     {% endwith %}
 {% for post in notes %}
-    {% include "forum/post.part.html" %}
+    {% include "tutorial/note.part.html" %}
 {% endfor %}
 
 {% with topic=tutorial %}
